--- a/main.css
+++ b/main.css
@@ -1,17 +1,73 @@
 img {
-  width: 50px;
-  height:50px;
+  width: 100px;
+  height:100px;
    background-color:#ffffff;
   position:fixed;
 }
 
+#creepbg {
+	width:100%;
+	height:100%;
+}
+	
+.blinkbg {
+	animation: blinkbg 45s infinite;
+}
+@keyframes blinkbg {
+	0% {
+		opacity: 0;
+	}
+	40% {
+		opacity: 0;
+	}
+	80% {
+		opacity: 0.35;
+	}
+	81% {
+		opacity: 0.8;
+	}
+	82% {
+		opacity: 0.1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+#creep {
+	position:absolute;
+	width:600px;
+	height:600px;
+	bottom:0px;
+	left:0px;
+}
+.blink {
+	animation: blink 20s infinite;
+}
+@keyframes blink {
+	0% {
+		opacity: 0;
+	}
+	85% {
+		opacity: 0;
+	}
+	90% {
+		opacity: 1;
+	}
+	95% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
 
 .imagespin {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 120px;
-    height: 120px;
+    width: 200px;
+    height: 200px;
     margin:-60px 0 0 -60px;
     -webkit-animation:spin 4s linear infinite;
     -moz-animation:spin 4s linear infinite;
